get the curation statuses faster: no expensive get calls